# jinja2-llm-prompting

./: README.md  pyproject.toml
prompts/: base_template.txt  examples-jinja2-prompting.ipynb  loop_prompt_template.txt  prompt_template.txt  specific_template.txt
