[tool.poetry]
name = "jinja2-llm-prompting"
version = "0.1.0"
description = ""
authors = ["Alex <alecgg27895@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
langchain = "^0.1.20"
langchain-core = "^0.1.52"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
